Fix: Author Avatar cropping issues.

--- a/newspack-scott/sass/style.scss
+++ b/newspack-scott/sass/style.scss
@@ -100,7 +100,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 }
 
 /* Avatar */
-.avatar,
+.author-avatar,
 .entry-content .wpnbha .avatar {
 	border-radius: 0;
 }
